tests/macro-tests/cases/widget_new/error_first_token.stderr
error: expected property or when
 --> cases/widget_new/error_first_token.rs:6:9
  |
6 |         =
  |         ^

error: expected property path
  --> cases/widget_new/error_first_token.rs:14:13
   |
14 |             =
   |             ^
